src/objects/Contract.object
<CustomObject >
    <fields>
        <fullName>MX_SB_SAC_FechaNacimiento__c</fullName>
        <description>Datos del contratatante.</description>
        <formula>Account.PersonBirthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha de Nacimiento</label>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_FechaFinContrato__c</fullName>
        <description>Campo para almacernar campo de Clipert: fechaFinVigencia.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Fin de Vigencia</label>
        <type>DateTime</type>
    </fields>
	 <fields>
        <fullName>MX_SB_SAC_FormaPago__c</fullName>
        <description>Datos de Pago: FormaPago de Clipert.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Forma de Pago</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_FechaVenta__c</fullName>
        <description>Datos Póliza: Fecha Venta en Cliper.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de Venta</label>
        <type>DateTime</type>
    </fields>
    <fields> 
        <fullName>MX_SB_SAC_InformacionGeneral__c</fullName>
        <formula>&apos;NÚMERO DE PÓLIZA: &apos; + MX_WB_noPoliza__c + BR() + &apos;+++NOMBRE CONTRATANTE: &apos; + MX_SB_SAC_NombreCuenta__c  + &apos; | &apos; + &apos;RFC CONTRATANTE: &apos; + MX_SB_SAC_RFCContratante__c + BR() + &apos;+++NOMBRE ASEGURADO: &apos; + MX_SB_SAC_NombreClienteAsegurado__c  + &apos; | &apos; + &apos;RFC ASEGURADO: &apos; + MX_SB_SAC_RFCAsegurado__c + BR() + &apos;+++NÚMERO DE SERIE: &apos; + MX_WB_numeroSerie__c + &apos; | &apos; + &apos;NÚMERO DE PLACAS: &apos; + MX_WB_placas__c + BR() + &apos;+++MARCA: &apos; + MX_WB_Marca__c + &apos; | &apos; + &apos;SUBMARCA: &apos; +  MX_WB_subMarca__c + &apos; | &apos; + &apos;PRODUCTO: &apos; +   MX_WB_Producto__r.Name  +  BR() + &apos;----------------------------------------------------------------------------------------------------------------------------------------------&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Informacion General</label>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_Anio__c</fullName>
        <description>Datos vehículo: Año en Cliper.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Año</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_NombreClienteAsegurado__c</fullName>
        <description>Nombre del asegurado.</description>
        <formula>MX_WB_nombreAsegurado__c + &apos; &apos; + MX_WB_apellidoPaternoAsegurado__c + &apos; &apos; + MX_WB_apellidoMaternoAsegurado__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre Cliente Asegurado</label>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_Agencia__c</fullName>
        <description>Datos Vehículo: Agencia en Cliper.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Segmento__c</fullName>
        <description>Se utilizará en el servicio de Clipert</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Segmento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_TipoMoneda__c</fullName>
        <description>Tipo de moneda, campo d eclipert</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tipo de moneda</label>
        <length>20</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_TipoPago__c</fullName>
        <description>Datos de pago: Tipo de Pago de Clipert.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tipo de Pago</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_NombreCuenta__c</fullName>
        <description>Nombre completo del cliente.</description>
        <formula>Account.FirstName + &apos; &apos; + Account.MiddleName + &apos; &apos; + Account.LastName</formula>
        <label>Nombre Cuenta</label>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_NoCuenta__c</fullName>
        <description>Datos Póliza: Número de Cuenta en Clipert.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Número de Cuenta</label>
        <length>16</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_NumeroFolio__c</fullName>
        <description>Datos Póliza: Número de Folio en Cliper.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Número de Folio</label>
        <length>10</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_Operador__c</fullName>
        <description>Datos Póliza: Operador en Cliper.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Operador</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_Plan__c</fullName>
        <description>Datos Póliza: Plan en Cliper.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_Promocion__c</fullName>
        <description>Datos de Pago: Promoción de Clipert.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Promoción</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_Renovacion__c</fullName>
        <description>Datos Póliza: Renovación de Cliper.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Renovación</label>
        <length>4</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_Servicio__c</fullName>
        <description>Datos Vehículo: Servicio en Cliper.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Servicio</label>
        <length>30</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_SolicitudFactura__c</fullName>
        <description>Datos de Pago: Solicitud de Factura en Clipert.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Solicitud de Factura</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_Subcanal__c</fullName>
        <description>Datos Póliza: Subcanal en Clipert.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Subcanal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_Subproducto__c</fullName>
        <description>Datos Póliza: SUbproducto en Cliper.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Subproducto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_RFCAsegurado__c</fullName>
        <description>RFC del asegurado.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>RFC Asegurado</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_RFCContratante__c</fullName>
        <description>RFC del contratante.</description>
        <formula>Account.RFC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFC Contratante</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Tipotarjetapago__c</fullName>
        <description>Tipo de tarjeta de pago.</description>
        <label>Tipo de tarjeta de pago</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Crédito</fullName>
                </value>
                <value>
                    <fullName>Cuenta de Cheques</fullName>
                </value>
                <value>
                    <fullName>Débito</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_Version__c</fullName>
        <description>Datos vehículo: Version en Cliper.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Versión</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_ZonaCirculacion__c</fullName>
        <description>Datos Póliza: ZonaCirculación de Cliper.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Zona de Circulación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Casa_o_Departamento__c</fullName>
        <description>Tipo de inmueble.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Casa o Departamento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Cercania_Mantos_Aquiferos__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Descripción del inmueble, si se encuentra cerca de ríos, lagos o mar.</description>
        <label>Cercania con rios, lagos o mar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Ciudad__c</fullName>
        <description>Ciudad donde se encuentra el inmueble a asegurar.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Ciudad</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Colonia__c</fullName>
        <description>Colonia donde se encuentra el inmueble a asegurar.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Colonia</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Danos_Contenidos__c</fullName>
        <description>Cobertura de contenidos.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Daños a los Contenidos</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Danos_Inmueble__c</fullName>
        <description>Suma total de cobertura al inmueble.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Daños Inmueble</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Equipo_Electronico__c</fullName>
        <description>Suma asegurada por daños al Equipo Electronico.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Daños al Equipo Electrónico</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Estado__c</fullName>
        <description>Estado dónde se encuentra el inmueble.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Estado</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_FamilaProducto__c</fullName>
        <description>Relación a familia de producto.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Familia Producto</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Frecuencia_de_Pago__c</fullName>
        <description>Frecuencia de pagos mensual, trimestral, semestral y anual.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Frecuencia de Pagos</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Meses_sin_Intereses__c</fullName>
        <description>Si aplica a meses sin intereses BBVA</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Meses sin Intereses BBVA</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Monto_Mensualidad__c</fullName>
        <description>Cantidad total de la mensualidad.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Monto de la Mensualidad</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Muros_Tabique_Ladrillo_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Material de construcción del inmueble.</description>
        <label>Muros de Tabique, Ladrillo, Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_No_Pisos_Inmueble__c</fullName>
        <description>Cantidad de pisos del inmueble.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Numero de Pisos</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Nombre_Intermediario__c</fullName>
        <description>Intermediario de póliza de auto.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre intermediario</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Numero_Exterior__c</fullName>
        <description>Número exterior del domicilio del inmueble.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Numero Exterior</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Numero_Interior__c</fullName>
        <description>Numero interior del domicilio del inmueble.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Numero Interior</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Piso_Habitado__c</fullName>
        <description>En caso de que el inmueble se encuentre en un edificio/condominio.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Piso habitado?</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Por_Robo__c</fullName>
        <description>Cobertura en caso de robo.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Por Robo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Precio_Anual__c</fullName>
        <description>Precio total a pagar al año.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Precio Anual</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Proteccion_Sismo__c</fullName>
        <description>Si cuenta con protección contra sismos.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Proteccion Contra Sismo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_Agencia__c</fullName>
        <description>Datos Vehículo: Agencia en Cliper.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_Anio__c</fullName>
        <description>Datos vehículo: Año en Cliper.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Año</label>
        <length>4</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_BeneficiarioPreferente__c</fullName>
        <description>Datos Póliza: BeneficiarioPreferente en Cliper.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Beneficiario Preferente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_Canal__c</fullName>
        <description>Datos Póliza: Canal en Clipert.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Canal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_Capacidad__c</fullName>
        <description>Datos Vehículo: Capacidad en Cliper.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Capacidad</label>
        <length>2</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_ClaveSB__c</fullName>
        <description>Datos vehículo: Clave SB de Cliper.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Clave SB</label>
        <length>10</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_DescuentoFacultado__c</fullName>
        <description>Datos de Pago: Descuento Facultado de Clipert.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Descuento Facultado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_EstatusPoliza__c</fullName>
        <description>Datos póliza: EstatusPoliza en Cliper.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Estatus de Poliza</label>
        <length>30</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_SAC_FechaAltaPoliza__c</fullName>
        <description>Datos Póliza: FechaAltaPoliza en Cliper.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Alta de Poliza</label>
        <type>DateTime</type>
    </fields>
	
    <fields>
        <fullName>MX_SB_VTS_RFC__c</fullName>
        <description>RFC del contratante.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>RFC</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_RespPrivada_Familiar__c</fullName>
        <description>Suma total asegurado de responsabilidad civil y familiar.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Responsabilidad Civil Privada y Familiar</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Rotura_Cristales__c</fullName>
        <description>Suma asegurada por ruptura de cristales.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Rotura de Cristales</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Techo_Tabique_Ladrillo_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Especifica si el edificio tiene bóveda de construcción.</description>
        <label>Techo Tabique, Ladrillo, Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WB_Alguien_mas_conduce__c</fullName>
        <description>Indica si alguien mas aparte del asegurado conduce el vehículo.</description>
        <label>Alguien mas conduce</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_Descuento_con_cupones__c</fullName>
        <description>tiene descuento de cupones</description>
        <label>Descuento cupones</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_EsContratante__c</fullName>
        <description>Indica si el asegurado es contratante o no</description>
        <label>¿Es contratante?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_Marca__c</fullName>
        <description>Marca del vehículo asegurado.</description>
        <label>Marca</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_Modelo__c</fullName>
        <description>Año del vehículo asegurado</description>
        <label>Modelo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_SaleACarretera__c</fullName>
        <description>indica si el vehículo asegurado sale a carretera o no.</description>
        <label>Sale a carretera</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_Sexo__c</fullName>
        <description>Sexo del asegurado</description>
        <label>Sexo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_Tipo_de_auto__c</fullName>
        <description>Tipo de auto asegurado</description>
        <label>Tipo de auto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>SUV</fullName>
                </value>
                <value>
                    <fullName>Pick Up</fullName>
                </value>
                <value>
                    <fullName>Camion (+3.5 Toneladas)</fullName>
                </value>
                <value>
                    <fullName>Moto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_apellidoMaternoAsegurado__c</fullName>
        <description>Apellido materno del asegurado</description>
        <label>Apellido materno del asegurado</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_apellidoPaternoAsegurado__c</fullName>
        <description>Apellido paterno del asegurado</description>
        <label>Apellido paterno del asegurado</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_celularAsegurado__c</fullName>
        <label>Celular Asegurado</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_comentariosPersonalizados__c</fullName>
        <description>Comentarios adicionales por parte del asegurado.</description>
        <label>Comentarios de personalización</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_cuenta_con_dispositivo_satelital__c</fullName>
        <description>indica si el vehículo asegurado cuenta con algún dispositivo satelital.</description>
        <label>cuenta con dispositivo satelital</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_emailAsegurado__c</fullName>
        <description>Email del asegurado</description>
        <label>Email del asegurado</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_existen_conductores_adicionales__c</fullName>
        <description>Indica si existen conductores adicionales al asegurado.</description>
        <label>Existen conductores adicionales</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_noPoliza__c</fullName>
        <description>Se almacena el número de póliza generado en la venta.</description>
        <inlineHelpText>Número de póliza emitida</inlineHelpText>
        <label>Número de Póliza</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_nombreAsegurado__c</fullName>
        <description>Nombre del asegurado</description>
        <label>Nombre del asegurado</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_numeroSerie__c</fullName>
        <description>Número de serie del vehículo asegurado</description>
        <label>Número de serie</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_origen__c</fullName>
        <description>Origen del vehículo asegurado</description>
        <label>Origen</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_placas__c</fullName>
        <description>Placas del vehículo asegurado</description>
        <label>Placas</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_subMarca__c</fullName>
        <description>Sub marca del vehículo asegurado</description>
        <label>Sub marca</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_telefonoAsegurado__c</fullName>
        <label>Teléfono Asegurado</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_Oportunidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relación entre contrato y oportunidad.</description>
        <label>Cotización</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contratos TLMK</relationshipLabel>
        <relationshipName>Contratos_TLMK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_WB_Producto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relación a producto.</description>
        <label>Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contratos</relationshipLabel>
        <relationshipName>Contratos_Producto</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_WB_edad_de_conductor_adicional__c</fullName>
        <description>Indica la edad de conductor adicional si es que existe.</description>
        <label>Edad de conductor adicional</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_noMotor__c</fullName>
        <description>Indica el número de motor del vehículo asegurado.</description>
        <label>Número de motor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Aneurisma_Trombosis_Embolia__c</fullName>
        <description>Indica si se tiene enfermedad respiratoria</description>
        <defaultValue>false</defaultValue>
        <label>Aneurisma, Trombosis, Embolia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Cancer_Tumores_Leucemia_Lupus__c</fullName>
        <description>Indica si se tiene enfermedad cancerigena</description>
        <defaultValue>false</defaultValue>
        <label>Cancer, Tumores, Leucemia, Lupus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_EmficemaBronquitisTuberculosis__c</fullName>
        <description>Indica si se tiene enfermedad bacteriana</description>
        <defaultValue>false</defaultValue>
        <label>Emficema, Bronquitis, Tuberculosis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Insuficiencias_Cirrosis_Hepati__c</fullName>
        <description>Indica si se tiene enfermedad hepatica</description>
        <defaultValue>false</defaultValue>
        <label>Insuficiencias, Cirrosis, Hepatitis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Total_Fallecimiento__c</fullName>
        <description>Suma total en caso de fallecimiento</description>
        <label>Total Fallecimiento</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Total_Gastos_Funerarios__c</fullName>
        <description>Suma total en caso de gastos funerarios</description>
        <label>Total Gastos Funerarios</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Total_Muerte_Accidental__c</fullName>
        <description>Suma total en caso de muerte accidental</description>
        <label>Total Muerte Accidental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
	<fields>
        <fullName>MX_SB_VTS_FechaFin__c</fullName>
        <description>Fecha final del contrato</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Fin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_FechaInicio__c</fullName>
        <description>Fecha inicial del contrato</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de Inicio</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_VTS_TotalPoliza__c</fullName>
        <description>Total de cobertura de la póliza</description>
        <label>Total poliza</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
</CustomObject>